# h-signature

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: cpp-build-and-test.yml  python-package.yml
include/h_signature/: h_signature.h
src/: bindings.cpp  h_signature.cpp
src/h_signature/: h_signature_torch.py
test/: test_h_signature.cpp  test_h_signature.py  test_h_signature_torch.py
